test/sc++/error/forall-array-coloncolon.scpp
../../scc/error/forall-array-coloncolon.sc